# optic-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shdr/: fallback2d.glsl  fallback3d.glsl  fallback_text2d.glsl  fallback_text3d.glsl
docs/: API.md  ENGINE.md  getting-started.md
dogma/: Cargo.toml
dogma/src/: main.rs
optic/: Cargo.toml  README.md
optic-color/: Cargo.toml  README.md
optic-color/src/: channels.rs  constants.rs  convert.rs  gradient.rs  hsl.rs  hsv.rs  lib.rs  rgb.rs  rgba.rs
optic-core/: Cargo.toml  README.md
optic-core/src/: ansi.rs  color.rs  consts.rs  coord.rs  enums.rs  error.rs  geometry.rs  lib.rs  log.rs  network.rs  proc.rs
optic-file/: Cargo.toml  README.md
optic-file/src/: lib.rs
optic-loop/: Cargo.toml  README.md
optic-loop/src/: game.rs  lib.rs  runtime.rs  scene.rs  time.rs  timer.rs
optic-online/: Cargo.toml  README.md
optic-online/src/: channels.rs  config.rs  handle.rs  lib.rs  peer.rs  transport.rs
optic-render/: Cargo.toml  README.md
optic-render/src/: context.rs  glraw.rs  lib.rs  renderer.rs
optic-render/src/asset/: font.rs  img.rs  mod.rs  msdf.rs  msh.rs  shdr.rs
optic-render/src/asset/attr/: attr.rs  dirty.rs  mod.rs  typ.rs
optic-render/src/camera/: camera.rs  mod.rs
optic-render/src/handles/: canvas.rs  font.rs  instance.rs  mesh.rs  mod.rs  shader.rs  text.rs  texture.rs
optic-render/src/text/: bbcode.rs  layout.rs  mod.rs
optic-render/src/util/: mod.rs
optic-render/src/util/transform/: mod.rs  trans2d.rs  trans3d.rs  transcam.rs
optic-signals/: Cargo.toml
optic-signals/src/: lib.rs
optic-sound/: Cargo.toml
optic-sound/src/: engine.rs  file.rs  lib.rs  sound2d.rs  sound3d.rs
optic-timer/: Cargo.toml
optic-timer/src/: lib.rs
optic-window/: Cargo.toml  README.md
optic-window/src/: events.rs  lib.rs  screen.rs  window.rs
optic/src/: lib.rs  prelude.rs
