[package]
name = "optic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, geometry, errors, and ANSI logging for Optic engine"

[dependencies]
cgmath.workspace = true
optic-color = { path = "../optic-color", version = "0.0.2" }
