[package]
name = "optic-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sanitary file I/O and cached path resolution for Optic engine"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.1" }
