[package]
name = "optic-online"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UDP networking for Optic engine — background tokio thread with connection management"
readme = "../README.md"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.2" }
tokio.workspace = true
