[package]
name = "optic-render"
version = "0.1.0"
edition = "2021"

[dependencies]
optic-core = { path = "../optic-core" }
optic-file = { path = "../optic-file" }
cgmath = "0.18.0"
khronos-egl = { version = "6.0", features = ["static"] }
gl = "0.14.0"
image = "0.25.8"
flate2 = "1.1.2"
raw-window-handle = "0.6"
