[package]
name = "optic-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenGL 4.6 renderer for Optic engine — EGL context, shaders, meshes, textures, cameras, canvas"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.3" }
optic-file = { path = "../optic-file", version = "0.0.3" }
cgmath.workspace = true
khronos-egl.workspace = true
gl.workspace = true
image.workspace = true
flate2.workspace = true
raw-window-handle.workspace = true
