[package]
name = "optic-signals"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Observable signal wrappers for Optic engine"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.3" }
optic-render = { path = "../optic-render", version = "0.0.3" }
