[package]
name = "optic-sound"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio playback for Optic engine — SoundFile, AudioEngine, Sound2D/Sound3D spatial audio"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.3" }
optic-file = { path = "../optic-file", version = "0.0.3" }
optic-render = { path = "../optic-render", version = "0.0.3" }
kira.workspace = true
cgmath.workspace = true
