[package]
name = "optic-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windowing and input for Optic engine — winit wrapper with per-frame key/mouse/gamepad state"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.1" }
winit.workspace = true
raw-window-handle.workspace = true
gilrs.workspace = true
