[package]
name = "optic-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windowing and input for Optic engine — winit wrapper with per-frame key/mouse/gamepad state"
readme = "../README.md"

[dependencies]
optic-core = { path = "../optic-core", version = "0.0.2" }
winit.workspace = true
raw-window-handle.workspace = true
gilrs.workspace = true
