[package]
name = "optic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optic game engine — facade crate with feature-gated re-exports"

[features]
default = ["full"]
core = ["optic-core"]
file = ["core", "optic-file"]
render = ["core", "file", "optic-render"]
window = ["core", "optic-window"]
minimal = ["render", "window", "optic-loop"]
full = ["core", "file", "render", "window", "optic-loop"]
online = ["optic-online"]

[dependencies]
cgmath.workspace = true
optic-core = { path = "../optic-core", optional = true }
optic-file = { path = "../optic-file", optional = true }
optic-render = { path = "../optic-render", optional = true }
optic-window = { path = "../optic-window", optional = true }
optic-loop = { path = "../optic-loop", optional = true }
optic-online = { path = "../optic-online", optional = true }
