[package]
name = "optic-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optic game engine — facade crate with feature-gated re-exports"
readme = "../README.md"

[features]
default = ["full"]
core = ["optic-core"]
file = ["core", "optic-file"]
render = ["core", "file", "optic-render"]
window = ["core", "optic-window"]
minimal = ["render", "window", "optic-loop"]
full = ["core", "file", "render", "window", "optic-loop"]
online = ["optic-online"]

[dependencies]
cgmath.workspace = true
optic-core = { path = "../optic-core", version = "0.0.2", optional = true }
optic-file = { path = "../optic-file", version = "0.0.2", optional = true }
optic-render = { path = "../optic-render", version = "0.0.2", optional = true }
optic-window = { path = "../optic-window", version = "0.0.2", optional = true }
optic-loop = { path = "../optic-loop", version = "0.0.2", optional = true }
optic-online = { path = "../optic-online", version = "0.0.2", optional = true }
